# QMIR

./: .gitignore  CMakeLists.txt  README.md
Dialect/: CMakeLists.txt
Dialect/include/Quantum/: QuantumDialect.h  QuantumDialect.td  QuantumOps.h  QuantumOps.td
Dialect/lib/Quantum/: CMakeLists.txt  QuantumDialect.cpp  QuantumOps.cpp
Parser/: CMakeLists.txt  MLIRGen.cpp  PairRemovePass.cpp  compiler.cpp
Parser/include/: AST.h  Lexer.h  MLIRGen.h  PairRemovePass.h  Parse.h
optimizations/: CMakeLists.txt  PairRemovePass.cpp
